[gd_scene load_steps=9 format=3 uid="uid://by3kfihubhbt7"]

[ext_resource type="Script" path="res://cenas/Cena07_Despedida.gd" id="1_26qpi"]
[ext_resource type="Texture2D" uid="uid://dgih03cpi6rq8" path="res://assets/hildegard.png" id="1_qo2ph"]
[ext_resource type="Texture2D" uid="uid://iqr3ubduvqh7" path="res://assets/casa-hildegard.png" id="2_jp0vm"]
[ext_resource type="Texture2D" uid="uid://c27mlfm6v4yvk" path="res://assets/cientista.png" id="2_o7fov"]
[ext_resource type="Texture2D" uid="uid://n31ee3805lok" path="res://assets/balao-fala.png" id="3_84mep"]
[ext_resource type="Texture2D" uid="uid://dox3rl6yvw1cx" path="res://assets/viajante.png" id="4_ttlrk"]
[ext_resource type="AudioStream" uid="uid://ccssau3bp3d82" path="res://assets/music/musica-medieval.mp3" id="6_twpm7"]
[ext_resource type="FontFile" uid="uid://djy146x3wurjd" path="res://fonts/Minecraftia-Regular.ttf" id="7_u42al"]

[node name="Cena07_Despedida" type="Node2D"]
script = ExtResource("1_26qpi")

[node name="CasaHidelgard" type="Sprite2D" parent="."]
position = Vector2(600, 237)
texture = ExtResource("2_jp0vm")

[node name="HildegardSprite" type="Sprite2D" parent="."]
position = Vector2(877, 515)
scale = Vector2(0.752, 0.789333)
texture = ExtResource("1_qo2ph")

[node name="ViajanteSprite" type="Sprite2D" parent="."]
position = Vector2(163, 540)
scale = Vector2(0.388898, 0.382688)
texture = ExtResource("4_ttlrk")

[node name="BruxoSprite" type="Sprite2D" parent="."]
position = Vector2(698, 508)
scale = Vector2(0.82, 0.756)
texture = ExtResource("2_o7fov")

[node name="UIScript" type="CanvasLayer" parent="."]

[node name="BalaoFala" type="TextureRect" parent="UIScript"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -389.0
offset_top = -234.0
offset_right = 323.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_84mep")

[node name="NomePersonagemLabel" type="Label" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 376.0
offset_top = -18.0
offset_right = 421.0
offset_bottom = 5.0
theme_override_fonts/font = ExtResource("7_u42al")
horizontal_alignment = 1

[node name="TextoDialogoLabel" type="RichTextLabel" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 102.0
offset_top = 46.0
offset_right = 628.0
offset_bottom = 159.0
theme_override_fonts/normal_font = ExtResource("7_u42al")

[node name="AvancarButton" type="Button" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 574.0
offset_top = 191.0
offset_right = 645.0
offset_bottom = 222.0
text = "Avan√ßar"

[node name="ClaraoFundo" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmbiencePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_twpm7")
autoplay = true
